// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default onUpdate options 1`] = `
Object {
  "Options": Object {},
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <button data-test-dummy-button=\\"\\">Click me!</button>
  <!--0-->
  <!--0-->
</p>
<!--0-->
",
}
`;

exports[`default onUpdate options 2`] = `
Object {
  "Options": Object {},
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <button data-test-dummy-button=\\"\\">Click me!</button>
  <!--0-->
  <!--0-->
</p>
<!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "editFormVisible": false,
    "onUpdateValue": [Function],
    "paragraphClassName": "mg-b-0",
    "title": "",
    "value": "",
  },
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <!--0-->
</p>
",
}
`;
